# entity/src/user_credit_balance.rs
@@ -1,0 +1,24 @@
+//! `SeaORM` Entity, @generated by sea-orm-codegen 1.1.13
+
+use sea_orm::entity::prelude::*;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Debug, PartialEq, DeriveEntityModel, Eq, Serialize, Deserialize)]
+#[sea_orm(table_name = "user_credit_balance")]
+pub struct Model {
+    #[sea_orm(primary_key, auto_increment = false)]
+    pub id: Uuid,
+    #[sea_orm(unique)]
+    pub purchase_identity: String,
+    pub subscription_credits: i32,
+    pub subscription_monthly_allocation: i32,
+    pub subscription_resets_at: Option<TimeDateTimeWithTimeZone>,
+    pub extra_credits_remaining: i32,
+    pub last_updated: TimeDateTimeWithTimeZone,
+    pub created_at: TimeDateTimeWithTimeZone,
+}
+
+#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
+pub enum Relation {}
+
+impl ActiveModelBehavior for ActiveModel {}
